# postgrest-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-manifest.json  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  release-please-config.json  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-python.yml  ci.yml  conventional-commits.yml  release.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: client.rst  exceptions.rst  filters.rst  request_builders.rst  responses.rst  types.rst
docs/examples/: basic_queries.rst  index.rst
infra/: docker-compose.yaml  init.sql
postgrest/: __init__.py  base_client.py  base_request_builder.py  deprecated_client.py  deprecated_get_request_builder.py  exceptions.py  types.py  utils.py  version.py
postgrest/_async/: client.py  request_builder.py
postgrest/_sync/: client.py  request_builder.py
postgrest_py/: __init__.py  async_client.py  base_client.py  base_request_builder.py  client.py  config.py  constants.py  deprecated_client.py  deprecated_get_request_builder.py  exceptions.py  request_builder.py  sync_client.py  types.py  utils.py
postgrest_py/_async/: client.py  request_builder.py
postgrest_py/_sync/: client.py  request_builder.py
tests/: test_async_client.py  test_client.py  test_filter_request_builder.py  test_postgrest_py.py  test_query_request_builder.py  test_request_builder.py  test_sync_client.py  test_utils.py
tests/_async/: client.py  test_client.py  test_filter_request_builder.py  test_filter_request_builder_integration.py  test_max_affected_integration.py  test_query_request_builder.py  test_request_builder.py
tests/_sync/: client.py  test_client.py  test_filter_request_builder.py  test_filter_request_builder_integration.py  test_max_affected_integration.py  test_query_request_builder.py  test_request_builder.py
