[tool.poetry]
name = "postgrest"
version = "0.15.0"
description = "PostgREST client for Python. This library provides an ORM interface to PostgREST."
authors = ["Lương Quang Mạnh <luongquangmanh85@gmail.com>", "Joel Lee <joel@joellee.org>", "Anand", "Oliver Rice", "Andrew Smith <a.smith@silentworks.co.uk>"]
homepage = "https://github.com/supabase-community/postgrest-py"
repository = "https://github.com/supabase-community/postgrest-py"
documentation = "https://postgrest-py.rtfd.io"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "postgrest" },
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.24,<0.26"
deprecation = "^2.1.0"
pydantic = ">=1.9,<3.0"
strenum = "^0.4.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^5.0.4"
black = "^23.10"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest-cov = "^4.0.0"
pytest-depends = "^1.0.1"
pytest-asyncio = "^0.23.3"
unasync-cli = "^0.0.9"
python-semantic-release = "^8.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
furo = "^2023.9.10"

[tool.semantic_release]
version_variables = ["postgrest/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
major_on_zero = false
commit_message = "chore(release): bump version to v{version}"
build_command = "curl -sSL https://install.python-poetry.org | python - && export PATH=\"/github/home/.local/bin:$PATH\" && poetry install && poetry build"
upload_to_vcs_release = true
branch = "master"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
