[tool.poetry]
name = "postgrest"
version = "1.1.1" # {x-release-please-version}
description = "PostgREST client for Python. This library provides an ORM interface to PostgREST."
authors = ["Lương Quang Mạnh <luongquangmanh85@gmail.com>", "Joel Lee <joel@joellee.org>", "Anand", "Oliver Rice", "Andrew Smith <a.smith@silentworks.co.uk>"]
homepage = "https://github.com/supabase/postgrest-py"
repository = "https://github.com/supabase/postgrest-py"
documentation = "https://postgrest-py.rtfd.io"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "postgrest" },
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = {version = ">=0.26,<0.29", extras = ["http2"]}
deprecation = "^2.1.0"
pydantic = ">=1.9,<3.0"
strenum = {version = "^0.4.9", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"
pytest-depends = "^1.0.1"
pytest-asyncio = "^1.0.0"
unasync-cli = { git = "https://github.com/supabase-community/unasync-cli.git", branch = "main" }
ruff = "^0.12.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
furo = ">=2023.9.10,<2026.0.0"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]
ignore = ["F401", "F403", "F841", "E712", "E501", "E402", "UP006", "UP035"]
# isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning", # ignore deprecation warnings globally
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
